[project]
name = "WebSearcher"
version = "0.8.6"
description = "Tools for conducting, collecting, and parsing web search"
authors = [{name = "Ronald E. Robertson", email = "rer@acm.org"}]
keywords = ["web", "search", "parser"]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.0",
    "lxml>=6.1.0",
    "beautifulsoup4>=4.12.3",
    "tldextract>=5.1.2",
    "brotli>=1.1.0",
    "pydantic>=2.9.2",
    "undetected-chromedriver>=3.5.5",
    "selenium>=4.9.0",
    "protobuf>=6.33.5,<8.0.0",
    "orjson>=3.11.5,<4.0.0",
]

[project.urls]
homepage = "http://github.com/gitronald/WebSearcher"
repository = "http://github.com/gitronald/WebSearcher"

[project.scripts]
demo-search = 'scripts.demo_search:app'
demo-searches = 'scripts.demo_searches:app'

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "syrupy>=4.8.1",
    "ipykernel>=6.29.5",
    "typer>=0.15.2",
    "pyarrow>=23.0.0",
    "polars>=1.37.1",
    "setuptools>=80.9.0",  # provides distutils shim for undetected_chromedriver on py3.12+
    "pre-commit>=4.5.1",
    "pyrefly",
    "ruff>=0.15.6",
    "pytest-cov>=7.0.0",
    "selectolax>=0.4.10",
]

[tool.pyrefly]
python-version = "3.12"
project-includes = ["WebSearcher"]

[tool.pytest.ini_options]
addopts = "--cov=WebSearcher --cov-report=term-missing"

[tool.coverage.run]
source = ["WebSearcher"]
omit = ["WebSearcher/search_methods/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python idioms)
]
ignore = ["E501"]  # line length handled by ruff format

[tool.ruff.lint.isort]
known-first-party = ["WebSearcher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Allowlist what the sdist ships. The wheel already contains only the
# WebSearcher/ package; this trims the sdist to match (~24MB -> a few hundred KB).
# Anything not listed here (docs, tests, CI config, dev dotfiles) stays in the
# repo but is kept out of the distributed source archive. pyproject.toml,
# README.md, and LICENSE are added automatically as project metadata.
only-include = [
    "WebSearcher",  # the importable package
    "scripts",      # demo-search / demo-searches console entry points
    "CHANGELOG.md",
]
