[project]
name = "WebSearcher"
version = "0.11.5"
description = "Tools for conducting, collecting, and parsing web search"
authors = [{name = "Ronald E. Robertson", email = "rer@acm.org"}]
keywords = ["web", "search", "parser"]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.0",
    "selectolax>=0.4.10",
    "tldextract>=5.1.2",
    "brotli>=1.1.0",
    "pydantic>=2.9.2",
    "patchright>=1.60.1",
    "protobuf>=6.33.5,<8.0.0",
    "orjson>=3.11.5,<4.0.0",
]

[project.urls]
homepage = "http://github.com/gitronald/WebSearcher"
repository = "http://github.com/gitronald/WebSearcher"

[project.scripts]
ws-demo = 'WebSearcher.demos:main'

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "syrupy>=4.8.1",
    "typer>=0.15.2",
    "pyarrow>=23.0.0",
    "polars>=1.37.1",
    "pre-commit>=4.5.1",
    "pyrefly",
    "ruff>=0.15.6",
    "pytest-cov>=7.0.0",
    # bs4 + lxml are dev-only: used by show_serp.py's overlay stripping (the
    # serp-inspect skill). Runtime parsing is selectolax-only.
    "beautifulsoup4>=4.12.3",
    "lxml>=6.1.0",
]

[tool.pyrefly]
python-version = "3.12"
project-includes = ["WebSearcher"]
# patchright is a runtime dep but ships no type stubs, so fall back to Any on its
# lazy imports instead of erroring.
ignore-missing-imports = [
    "patchright",
    "patchright.sync_api",
]

[tool.pytest.ini_options]
addopts = "--cov=WebSearcher --cov-report=term-missing"

[tool.coverage.run]
source = ["WebSearcher"]
omit = ["WebSearcher/searchers/*_searcher.py", "WebSearcher/parsers/bench.py"]  # bench is a dev tool, run from a checkout

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python idioms)
]
ignore = ["E501"]  # line length handled by ruff format

[tool.ruff.lint.isort]
known-first-party = ["WebSearcher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Allowlist what the sdist ships. The wheel already contains only the
# WebSearcher/ package; this trims the sdist to match (~24MB -> a few hundred KB).
# Anything not listed here (docs, tests, CI config, dev dotfiles) stays in the
# repo but is kept out of the distributed source archive. pyproject.toml,
# README.md, and LICENSE are added automatically as project metadata.
only-include = [
    "WebSearcher",  # the importable package (includes the demos at WebSearcher/demos/)
    "CHANGELOG.md",
]
