[bumpversion]
current_version = 0.1.14
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = {current_version}
replace = {new_version}

[bumpversion:file:README.md]
search = {current_version}
replace = {new_version}

[bumpversion:file:WebSearcher/__init__.py]
search = {current_version}
replace = {new_version}

