[bumpversion]
current_version = 0.2.14
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = {current_version}
replace = {new_version}

[bumpversion:file:README.md]
search = WebSearcher {current_version}
replace = WebSearcher {new_version}

[bumpversion:file:WebSearcher/__init__.py]
search = {current_version}
replace = {new_version}
